<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/space_gray"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/forecast_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime_example"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/forecast_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_example"
            android:textColor="@color/white"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/forecast_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/forecast_max_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_min_temp"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>